--- a/src/components/Header/main.scss
+++ b/src/components/Header/main.scss
@@ -5,8 +5,8 @@
   z-index: 310;
   top: 0;
   padding: 0 42px;
-  box-shadow: 0 1px 3px 0 #00000026;
-  background-color: #282828;
+  box-shadow: 0 1px 3px 0 hwb(0 100% 0%);
+  background-color: #ee4e4e;
   display: flex;
   justify-content: space-between;
   height: 44px;
